--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 05:57:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dca" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -463,7 +463,7 @@ margin: 0rem !important;
                     <div class="hero-purple-heading">
                       <a href="#" class="hero-heading-link">vizuální</a>
                     </div>
-                    <div data-w-id="191ab76d-b1b7-b66a-22c5-d08df0ff76bf" style="width:0%" class="purple-progress-bar"></div>
+                    <div class="purple-progress-bar"></div>
                   </div>
                 </div>
               </div>
@@ -481,7 +481,7 @@ margin: 0rem !important;
                     <h2>Od prvního pixelu...</h2>
                   </div>
                 </div>
-                <div id="w-node-dd0b907f-ea3b-379c-6b07-e33304e34fc2-bf535dca" data-w-id="dd0b907f-ea3b-379c-6b07-e33304e34fc2" style="opacity:0" class="portfolio-info_content">
+                <div id="w-node-dd0b907f-ea3b-379c-6b07-e33304e34fc2-bf535dca" class="portfolio-info_content">
                   <div class="portfolio-info_design"><img src="images/arrows_1.avif" loading="lazy" sizes="(max-width: 1659px) 100vw, 1659px" srcset="images/arrows_1-p-500.png 500w, images/arrows_1.avif 1659w" alt="" class="portfolio-info_image"></div>
                   <div class="portfolio-info_description">
                     <h2 id="w-node-dd0b907f-ea3b-379c-6b07-e33304e34fc3-bf535dca" class="heading-style-h2-homepage">Vás provedu tvorbou, která propojí vizuální identitu vaší značky. Nabízím služby od tvorby webů až po branding. S profesionálním přístupem vám pomohu vytvořit silnou a poutavou digitální prezentaci.</h2>
@@ -510,7 +510,7 @@ margin: 0rem !important;
       </section>
       <section id="Intro" class="section_intro-video">
         <div class="padding-global lottie-intro hide">
-          <div data-w-id="64f7b5a5-d772-c29c-a19b-7818786369fc" style="opacity:0" class="images-sequence">
+          <div data-w-id="64f7b5a5-d772-c29c-a19b-7818786369fc" class="images-sequence">
             <div data-w-id="64f7b5a5-d772-c29c-a19b-7818786369fd" data-is-ix2-target="1" class="intro_lottie" data-animation-type="lottie" data-src="documents/lottie_intro_desktop.json" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="3.1666666666666665" data-duration="0"></div>
             <div data-w-id="64f7b5a5-d772-c29c-a19b-7818786369fe" data-is-ix2-target="1" class="intro_lottie-mobile" data-animation-type="lottie" data-src="documents/lottie_intro_mobile.json" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="3.1666666666666665" data-duration="0"></div>
             <div bind="64f7b5a5-d772-c29c-a19b-7818786369ff" class="w-embed">
@@ -1503,7 +1503,7 @@ if (Webflow.env("editor") === undefined) {
     simulateTouch: true,
     allowTouchMove: true,
     breakpoints: {
-      0: { slidesPerView: 1.5, spaceBetween: 8 },
+      0: { slidesPerView: 1.1, spaceBetween: 8 },
       767: { slidesPerView: 1.2, spaceBetween: 12 },
       1024: { slidesPerView: 2.1, spaceBetween: 12 },
       1280: { slidesPerView: 2, spaceBetween: 16 }
