--- a/projekt-bitbeli.html
+++ b/projekt-bitbeli.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 05:57:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68132e8c688341f2c5aa9882" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -389,7 +389,7 @@ margin: 0rem !important;
               <div class="project-cover"><img src="images/bitbeli_cover_big_1.avif" loading="eager" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/bitbeli_cover_big_1bitbeli_cover_big.avif 500w, images/bitbeli_cover_big_1.avif 2500w" alt="Little Styler webová stránka" class="project-image div-square"></div>
               <div class="project-cover"><img src="images/bitbeli-mockup-logo2_1.avif" loading="eager" sizes="(max-width: 1700px) 100vw, 1700px" srcset="images/bitbeli-mockup-logo2_1bitbeli-mockup-logo2.avif 500w, images/bitbeli-mockup-logo2_1bitbeli-mockup-logo2.avif 800w, images/bitbeli-mockup-logo2_1bitbeli-mockup-logo2.avif 1080w, images/bitbeli-mockup-logo2_1.avif 1700w" alt="Little Styler webová stránka" class="project-image"></div>
               <div class="project-cover"><img src="images/Bitbeli_Prezentace_1.avif" loading="eager" sizes="(max-width: 2200px) 100vw, 2200px" srcset="images/Bitbeli_Prezentace_1Bitbeli_Prezentace.avif 500w, images/Bitbeli_Prezentace_1Bitbeli_Prezentace.avif 800w, images/Bitbeli_Prezentace_1Bitbeli_Prezentace.avif 1080w, images/Bitbeli_Prezentace_1.avif 2200w" alt="Little Styler webová stránka" class="project-image"></div>
-              <div class="project-cover"><img src="images/Bitbeli_3D_3.avif" loading="eager" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Bitbeli_3D_3Bitbeli_3D_02.avif 500w, images/Bitbeli_3D_3Bitbeli_3D_02.avif 800w, images/Bitbeli_3D_3Bitbeli_3D_02.avif 1080w, images/Bitbeli_3D_3.avif 2500w" alt="Little Styler voucher" class="project-image div-square"></div>
+              <div class="project-cover"><img src="images/Bitbeli_3D_3.avif" loading="eager" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Bitbeli_3D_3Bitbeli_3D_02.avif 500w, images/Bitbeli_3D_3Bitbeli_3D_02.avif 800w, images/Bitbeli_3D_3Bitbeli_3D_02.avif 1080w, images/Bitbeli_3D_3.avif 2500w" alt="Little Styler voucher" class="project-image"></div>
               <div class="project-cover"><img src="images/Bitbeli_3D_2.avif" loading="eager" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Bitbeli_3D_2Bitbeli_3D_01.avif 500w, images/Bitbeli_3D_2Bitbeli_3D_01.avif 800w, images/Bitbeli_3D_2Bitbeli_3D_01.avif 1080w, images/Bitbeli_3D_2.avif 2500w" alt="Little Styler vizitky" class="project-image div-square"></div>
               <div class="project-cover"><img src="images/Bitbeli_3D_4.avif" loading="eager" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Bitbeli_3D_4Bitbeli_3D_03.avif 500w, images/Bitbeli_3D_4Bitbeli_3D_03.avif 800w, images/Bitbeli_3D_4Bitbeli_3D_03.avif 1080w, images/Bitbeli_3D_4.avif 2500w" alt="Little Styler voucher" class="project-image div-square"></div>
               <div class="project-cover"><img src="images/Bitbeli_3D_5.avif" loading="eager" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Bitbeli_3D_5Bitbeli_3D_04.avif 500w, images/Bitbeli_3D_5Bitbeli_3D_04.avif 800w, images/Bitbeli_3D_5.avif 2500w" alt="Little Styler voucher" class="project-image div-square"></div>
@@ -399,8 +399,8 @@ margin: 0rem !important;
                 <div class="w-layout-cell project-cover"><img src="images/Bitbeli_IG_3.avif" loading="eager" sizes="(max-width: 1080px) 100vw, 1080px" srcset="images/Bitbeli_IG_3Bitbeli_IG_02.avif 500w, images/Bitbeli_IG_3.avif 1080w" alt="Little Styler banner" class="project-image"></div>
                 <div class="w-layout-cell project-cover"><img src="images/Bitbeli_IG_4.avif" loading="eager" alt="Little Styler banner" class="project-image"></div>
               </div>
-              <div class="project-cover"><img src="images/Bitbeli_PPC_1.avif" loading="eager" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/Bitbeli_PPC_1Bitbeli_PPC.avif 500w, images/Bitbeli_PPC_1Bitbeli_PPC.avif 800w, images/Bitbeli_PPC_1.avif 2000w" alt="Little Styler voucher" class="project-image div-square"></div>
-              <div class="project-cover"><img src="images/Bitbeli_altcoin_community_cover_final_1.avif" loading="eager" sizes="(max-width: 1640px) 100vw, 1640px" srcset="images/Bitbeli_altcoin_community_cover_final_1Bitbeli_altcoin_community_cover_final.avif 500w, images/Bitbeli_altcoin_community_cover_final_1Bitbeli_altcoin_community_cover_final.avif 800w, images/Bitbeli_altcoin_community_cover_final_1.avif 1640w" alt="Little Styler voucher" class="project-image div-square"></div>
+              <div class="project-cover"><img src="images/Bitbeli_PPC_1.avif" loading="eager" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/Bitbeli_PPC_1Bitbeli_PPC.avif 500w, images/Bitbeli_PPC_1Bitbeli_PPC.avif 800w, images/Bitbeli_PPC_1.avif 2000w" alt="Little Styler voucher" class="project-image"></div>
+              <div class="project-cover"><img src="images/Bitbeli_altcoin_community_cover_final_1.avif" loading="eager" sizes="(max-width: 1640px) 100vw, 1640px" srcset="images/Bitbeli_altcoin_community_cover_final_1Bitbeli_altcoin_community_cover_final.avif 500w, images/Bitbeli_altcoin_community_cover_final_1Bitbeli_altcoin_community_cover_final.avif 800w, images/Bitbeli_altcoin_community_cover_final_1.avif 1640w" alt="Little Styler voucher" class="project-image"></div>
             </div>
           </div>
         </div>
@@ -423,13 +423,13 @@ margin: 0rem !important;
               </div>
               <div class="next-prev-project">
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="projekt-probinex.html" class="my-custom-prev w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="projekt-dubai-reality.html" class="my-custom-prev w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">předchozí</div>
                   </a>
                 </div>
                 <div class="vertical-divider"></div>
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="projekt-worm-up.html" class="my-custom-next w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="projekt-colosseum-ticket.html" class="my-custom-next w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">následující</div>
                   </a>
                 </div>
