--- a/projekt-colosseum-ticket.html
+++ b/projekt-colosseum-ticket.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 05:57:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68120fca320f33da1bb0e929" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -435,7 +435,7 @@ margin: 0rem !important;
                 <div class="plyr_embed w-embed"><video style="width: 100%; height: 100%;" class="plyr_video" playsinline="" controls="" data-poster="">
                     <source src="https://dfdesigner.s3.eu-north-1.amazonaws.com/Mozart+Dinner.mp4" type="video/mp4">
                   </video></div>
-                <div class="plyr_cover"><img sizes="100vw" srcset="images/probinex_thumnail-video2-min-p-500.jpg 500w, images/probinex_thumnail-video2-min-p-800.jpg 800w, images/probinex_thumnail-video2-min-p-1080.jpg 1080w, images/probinex_thumnail-video2-min-p-1600.jpg 1600w, images/probinex_thumnail-video2-min.webp 1727w" alt="" src="images/probinex_thumnail-video2-min.webp" loading="lazy" class="plyr_cover-img">
+                <div class="plyr_cover"><img sizes="(max-width: 1727px) 100vw, 1727px" srcset="images/cover_mozart_1cover_mozart.avif 500w, images/cover_mozart_1cover_mozart.avif 800w, images/cover_mozart_1.avif 1727w" alt="" src="images/cover_mozart_1.avif" loading="lazy" class="plyr_cover-img">
                   <div class="plyr_cover-button"><img loading="lazy" src="images/play_button.svg" alt="" class="video_button-icon"></div>
                 </div>
                 <div class="plyr_pause-trigger"></div>
