--- a/projekt-dubai-reality.html
+++ b/projekt-dubai-reality.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 05:57:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6811e193ba58a014779eee42" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -295,6 +295,17 @@ margin: 0rem !important;
   }
 </style>
     </div>
+    <div bind="8c749883-2525-1af7-3dc4-2cb7a54c8fb1" class="cursor-wrapper play">
+      <div bind="8c749883-2525-1af7-3dc4-2cb7a54c8fb8" class="w-embed">
+        <style>
+.cursor-wrapper {pointer-events: none;}
+</style>
+      </div>
+      <div class="tooltip_overlay left play">
+        <div class="tooltip-text">Play</div>
+        <div class="tooltip-bg custom-purple"></div>
+      </div>
+    </div>
     <div bind="714b2122-ee11-1473-cf40-3ed6e360fbf8" class="vimeo-styles w-embed">
       <style>
 [css-radius-respect] {
@@ -468,11 +479,11 @@ margin: 0rem !important;
                 <div class="w-layout-cell project-cover"><img src="images/Dubai_Realiy_Vizitky_1.avif" loading="eager" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Dubai_Realiy_Vizitky_1Dubai_Realiy_Vizitky.avif 500w, images/Dubai_Realiy_Vizitky_1Dubai_Realiy_Vizitky.avif 800w, images/Dubai_Realiy_Vizitky_1Dubai_Realiy_Vizitky.avif 1080w, images/Dubai_Realiy_Vizitky_1.avif 2500w" alt="Little Styler banner" class="project-image"></div>
                 <div class="w-layout-cell project-cover"><img src="images/Dubai_Reality_Airportag_1.avif" loading="eager" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Dubai_Reality_Airportag_1Dubai_Reality_Airportag.avif 500w, images/Dubai_Reality_Airportag_1Dubai_Reality_Airportag.avif 800w, images/Dubai_Reality_Airportag_1Dubai_Reality_Airportag.avif 1080w, images/Dubai_Reality_Airportag_1.avif 2500w" alt="Little Styler banner" class="project-image"></div>
               </div>
-              <div class="plyr_component">
+              <div data-w-id="4138813d-4064-862d-2158-edb0326ea909" class="plyr_component">
                 <div class="plyr_embed w-embed"><video style="width: 100%; height: 100%;" class="plyr_video" playsinline="" controls="" data-poster="">
                     <source src="https://dfdesigner.s3.eu-north-1.amazonaws.com/Dubai+Reality+Promo+Video.mp4" type="video/mp4">
                   </video></div>
-                <div class="plyr_cover"><img sizes="100vw" srcset="images/cover-dubai-video-p-500.jpg 500w, images/cover-dubai-video.avif 1727w" alt="" src="images/cover-dubai-video.avif" loading="lazy" class="plyr_cover-img">
+                <div class="plyr_cover"><img sizes="(max-width: 1727px) 100vw, 1727px" srcset="images/cover-dubai-video-p-500.jpg 500w, images/cover-dubai-video.avif 1727w" alt="" src="images/cover-dubai-video.avif" loading="lazy" class="plyr_cover-img">
                   <div class="plyr_cover-button"><img loading="lazy" src="images/play_button.svg" alt="" class="video_button-icon"></div>
                 </div>
                 <div class="plyr_pause-trigger"></div>
@@ -499,13 +510,13 @@ margin: 0rem !important;
               </div>
               <div class="next-prev-project">
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="projekt-probinex.html" class="my-custom-prev w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="projekt-esty.html" class="my-custom-prev w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">předchozí</div>
                   </a>
                 </div>
                 <div class="vertical-divider"></div>
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="projekt-worm-up.html" class="my-custom-next w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="projekt-bitbeli.html" class="my-custom-next w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">následující</div>
                   </a>
                 </div>
