--- a/projekt-esty.html
+++ b/projekt-esty.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 05:57:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6811d1e06ec06edd685c1728" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@ html.wf-loading * {
 </style>
     </div>
     <div class="tooltip_overlay left play">
-      <div class="tooltip-text">Play</div>
+      <div class="tooltip-text">Live</div>
       <div class="tooltip-bg custom-purple"></div>
     </div>
   </div>
@@ -388,7 +388,7 @@ margin: 0rem !important;
               </div>
               <div id="w-node-_55983cc3-69ee-5ddd-e26d-a0646e3881ac-685c1728" class="w-layout-cell">
                 <div class="w-layout-vflex feature-cell">
-                  <p class="p-custom">ESTY Holding je dynamická česká společnost, která propojuje svět developmentu s digitálními inovacemi. Zaměřujeme se na komplexní podporu developerských projektů — od akvizice pozemků, přes projektový management a financování, až po silný marketing a profesionální webové prezentace.</p>
+                  <p class="p-custom">ESTY Holding je dynamická česká společnost, která propojuje svět developmentu s digitálními inovacemi. Zaměřujeme se na komplexní podporu developerských projektů — od akvizice pozemků, přes projektový management a financování, až po silný marketing a profesionální webové prezentace.</p>
                   <p>Ve spolupráci s ESTY Holding jsem působil jako externí webdesignér, kde jsem se podílel na návrhu webových rozhraní pro jejich developerské projekty. Moje práce zahrnovala tvorbu moderních, přehledných  webových prezentací, které podporují prodej a posilují vizuální identitu každého projektu.<br></p>
                 </div>
               </div>
@@ -396,7 +396,7 @@ margin: 0rem !important;
             <div class="project-gallery">
               <div class="w-layout-grid project-2-grid-box">
                 <div class="project-item">
-                  <div id="w-node-_30aab10f-3111-8402-9eb2-ef38d5a107e1-685c1728" class="project-cover"><img src="images/Odra_Cover_1.avif" loading="eager" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/Odra_Cover_1Odra_Cover.avif 500w, images/Odra_Cover_1Odra_Cover.avif 800w, images/Odra_Cover_1Odra_Cover.avif 1080w, images/Odra_Cover_1.avif 2000w" alt="Probinex banner" class="project-image"></div>
+                  <a id="w-node-_30aab10f-3111-8402-9eb2-ef38d5a107e1-685c1728" data-w-id="30aab10f-3111-8402-9eb2-ef38d5a107e1" href="https://odrarezidence.cz/" target="_blank" class="project-cover w-inline-block"><img src="images/Odra_Cover_1.avif" loading="eager" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/Odra_Cover_1Odra_Cover.avif 500w, images/Odra_Cover_1Odra_Cover.avif 800w, images/Odra_Cover_1Odra_Cover.avif 1080w, images/Odra_Cover_1.avif 2000w" alt="Probinex banner" class="project-image"></a>
                   <div class="services_info">
                     <div class="services-text-tag text-style-allcaps">2024</div>
                     <div class="services-text-tag text-style-allcaps">•</div>
@@ -405,7 +405,7 @@ margin: 0rem !important;
                   <h2 class="heading-style-h3">REzidence Odra</h2>
                 </div>
                 <div class="project-item is-down">
-                  <div id="w-node-_30aab10f-3111-8402-9eb2-ef38d5a107e3-685c1728" class="project-cover"><img src="images/Hutisko_Cover_1.avif" loading="eager" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/Hutisko_Cover_1Hutisko_Cover.avif 500w, images/Hutisko_Cover_1Hutisko_Cover.avif 800w, images/Hutisko_Cover_1Hutisko_Cover.avif 1080w, images/Hutisko_Cover_1.avif 2000w" alt="Probinex banner" class="project-image"></div>
+                  <a id="w-node-_30aab10f-3111-8402-9eb2-ef38d5a107e3-685c1728" data-w-id="30aab10f-3111-8402-9eb2-ef38d5a107e3" href="https://hutisko.cz/" target="_blank" class="project-cover w-inline-block"><img src="images/Hutisko_Cover_1.avif" loading="eager" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/Hutisko_Cover_1Hutisko_Cover.avif 500w, images/Hutisko_Cover_1Hutisko_Cover.avif 800w, images/Hutisko_Cover_1Hutisko_Cover.avif 1080w, images/Hutisko_Cover_1.avif 2000w" alt="Probinex banner" class="project-image"></a>
                   <div class="services_info">
                     <div class="services-text-tag text-style-allcaps">2024</div>
                     <div class="services-text-tag text-style-allcaps">•</div>
@@ -416,7 +416,7 @@ margin: 0rem !important;
               </div>
               <div class="w-layout-grid project-2-grid-box">
                 <div class="project-item">
-                  <div id="w-node-_08d74d4a-ecc0-f219-1f6e-f6309b9b8f81-685c1728" class="project-cover"><img src="images/Vila_Domy__Cover_1.avif" loading="eager" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/Vila_Domy__Cover_1Vila_Domy__Cover.avif 500w, images/Vila_Domy__Cover_1Vila_Domy__Cover.avif 800w, images/Vila_Domy__Cover_1Vila_Domy__Cover.avif 1080w, images/Vila_Domy__Cover_1.avif 2000w" alt="Probinex banner" class="project-image"></div>
+                  <a id="w-node-_08d74d4a-ecc0-f219-1f6e-f6309b9b8f81-685c1728" data-w-id="08d74d4a-ecc0-f219-1f6e-f6309b9b8f81" href="https://www.viladomy-ujezd.cz/" target="_blank" class="project-cover w-inline-block"><img src="images/Vila_Domy__Cover_1.avif" loading="eager" sizes="(max-width: 2000px) 100vw, 2000px" srcset="images/Vila_Domy__Cover_1Vila_Domy__Cover.avif 500w, images/Vila_Domy__Cover_1Vila_Domy__Cover.avif 800w, images/Vila_Domy__Cover_1Vila_Domy__Cover.avif 1080w, images/Vila_Domy__Cover_1.avif 2000w" alt="Probinex banner" class="project-image"></a>
                   <div class="services_info">
                     <div class="services-text-tag text-style-allcaps">2024</div>
                     <div class="services-text-tag text-style-allcaps">•</div>
@@ -456,13 +456,13 @@ margin: 0rem !important;
               </div>
               <div class="next-prev-project">
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="#" class="my-custom-prev w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="portfolio-tiskoviny.html" class="my-custom-prev w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">předchozí</div>
                   </a>
                 </div>
                 <div class="vertical-divider"></div>
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="projekt-little-styler.html" class="my-custom-next w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="projekt-dubai-reality.html" class="my-custom-next w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">následující</div>
                   </a>
                 </div>
