--- a/projekt-probinex.html
+++ b/projekt-probinex.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 05:57:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535ddf" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -444,10 +444,10 @@ margin: 0rem !important;
             </div>
             <div class="project-gallery">
               <div class="w-layout-grid project-2-grid-box">
-                <div id="w-node-_30aab10f-3111-8402-9eb2-ef38d5a107e1-bf535ddf" class="project-cover"><img src="images/Blog_kryptobezpecnost_1200X750_EN-min.webp" loading="eager" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/Blog_kryptobezpecnost_1200X750_EN-min-p-500.jpg 500w, images/Blog_kryptobezpecnost_1200X750_EN-min-p-800.jpg 800w, images/Blog_kryptobezpecnost_1200X750_EN-min-p-1080.jpg 1080w, images/Blog_kryptobezpecnost_1200X750_EN-min.webp 1200w" alt="Probinex banner" class="project-image"></div>
-                <div id="w-node-_30aab10f-3111-8402-9eb2-ef38d5a107e3-bf535ddf" class="project-cover"><img src="images/StayKing_six_different_strategies.webp" loading="eager" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/StayKing_six_different_strategies-p-500.jpg 500w, images/StayKing_six_different_strategies-p-800.jpg 800w, images/StayKing_six_different_strategies-p-1080.jpg 1080w, images/StayKing_six_different_strategies.webp 1200w" alt="Probinex banner" class="project-image"></div>
+                <div id="w-node-_30aab10f-3111-8402-9eb2-ef38d5a107e1-bf535ddf" data-w-id="30aab10f-3111-8402-9eb2-ef38d5a107e1" class="project-cover"><img src="images/Blog_kryptobezpecnost_1200X750_EN-min.webp" loading="eager" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/Blog_kryptobezpecnost_1200X750_EN-min-p-500.jpg 500w, images/Blog_kryptobezpecnost_1200X750_EN-min-p-800.jpg 800w, images/Blog_kryptobezpecnost_1200X750_EN-min-p-1080.jpg 1080w, images/Blog_kryptobezpecnost_1200X750_EN-min.webp 1200w" alt="Probinex banner" class="project-image"></div>
+                <div id="w-node-_30aab10f-3111-8402-9eb2-ef38d5a107e3-bf535ddf" data-w-id="30aab10f-3111-8402-9eb2-ef38d5a107e3" class="project-cover"><img src="images/StayKing_six_different_strategies.webp" loading="eager" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/StayKing_six_different_strategies-p-500.jpg 500w, images/StayKing_six_different_strategies-p-800.jpg 800w, images/StayKing_six_different_strategies-p-1080.jpg 1080w, images/StayKing_six_different_strategies.webp 1200w" alt="Probinex banner" class="project-image"></div>
               </div>
-              <div class="plyr_component">
+              <div data-w-id="4d814326-8edf-35ac-c284-8a0ec2590545" class="plyr_component">
                 <div class="plyr_embed w-embed"><video style="width: 100%; height: 100%;" class="plyr_video" playsinline="" controls="" data-poster="">
                     <source src="https://dfdesigner.s3.eu-north-1.amazonaws.com/Weekly+News+Probinex.mp4" type="video/mp4">
                   </video></div>
@@ -460,7 +460,7 @@ margin: 0rem !important;
                 <div id="w-node-ba33fb3b-045b-16b0-4b97-32b401ed1c89-bf535ddf" class="project-cover"><img src="images/Blog_Probinex_Outlook_2023-min.webp" loading="eager" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/Blog_Probinex_Outlook_2023-min-p-500.jpg 500w, images/Blog_Probinex_Outlook_2023-min-p-800.jpg 800w, images/Blog_Probinex_Outlook_2023-min-p-1080.jpg 1080w, images/Blog_Probinex_Outlook_2023-min.webp 1200w" alt="Probinex banner" class="project-image"></div>
                 <div id="w-node-ba33fb3b-045b-16b0-4b97-32b401ed1c8b-bf535ddf" class="project-cover"><img src="images/Airdrop_banner_1280_720_space_v1-min.webp" loading="eager" sizes="(max-width: 1280px) 100vw, 1280px" srcset="images/Airdrop_banner_1280_720_space_v1-min-p-500.jpg 500w, images/Airdrop_banner_1280_720_space_v1-min-p-800.jpg 800w, images/Airdrop_banner_1280_720_space_v1-min-p-1080.jpg 1080w, images/Airdrop_banner_1280_720_space_v1-min.webp 1280w" alt="Probinex banner" class="project-image"></div>
               </div>
-              <div class="plyr_component">
+              <div data-w-id="45f895a9-01bc-bf3f-1e6c-dbf2742ba831" class="plyr_component">
                 <div class="plyr_embed w-embed"><video style="width: 100%; height: 100%;" class="plyr_video" playsinline="" controls="" data-poster="">
                     <source src="https://dfdesigner.s3.eu-north-1.amazonaws.com/Dymanic+Text.mp4" type="video/mp4">
                   </video></div>
@@ -469,7 +469,7 @@ margin: 0rem !important;
                 </div>
                 <div class="plyr_pause-trigger"></div>
               </div>
-              <div class="plyr_component">
+              <div data-w-id="1226b3a6-e423-33cf-b182-8fcc033d4aa2" class="plyr_component">
                 <div class="plyr_embed w-embed"><video style="width: 100%; height: 100%;" class="plyr_video" playsinline="" controls="" data-poster="">
                     <source src="https://dfdesigner.s3.eu-north-1.amazonaws.com/Probinex+News+Intro.mp4" type="video/mp4">
                   </video></div>
@@ -521,7 +521,7 @@ margin: 0rem !important;
               </div>
               <div class="next-prev-project">
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="#" class="my-custom-prev w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="projekt-colosseum-ticket.html" class="my-custom-prev w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">předchozí</div>
                   </a>
                 </div>
