--- a/portfolio-loga.html
+++ b/portfolio-loga.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 05:57:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535dd8" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -378,6 +378,7 @@ margin: 0rem !important;
               </div>
             </div>
             <div class="project-gallery">
+              <div class="project-cover"><img src="images/Bitbeli_Logo_1.avif" loading="eager" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Bitbeli_Logo_1Bitbeli_Logo.avif 500w, images/Bitbeli_Logo_1.avif 2500w" alt="Littly Styler logo" class="project-image div-square"></div>
               <div class="project-cover"><img src="images/logo_mockup_portfolio.jpg" loading="eager" sizes="(max-width: 1900px) 100vw, 1900px" srcset="images/logo_mockup_portfolio-p-500.jpg 500w, images/logo_mockup_portfolio-p-800.jpg 800w, images/logo_mockup_portfolio-p-1080.jpg 1080w, images/logo_mockup_portfolio.jpg 1900w" alt="Littly Styler logo" class="project-image div-square"></div>
               <div id="w-node-e6a5f975-7b65-904c-03fd-6cc80a7df4af-bf535dd8" class="w-layout-layout project-2-grid-box wf-layout-layout">
                 <div class="w-layout-cell project-cover"><img src="images/Jdetobezbanky_1.avif" loading="eager" alt="Sebak strength logo" class="project-image"></div>
@@ -419,13 +420,13 @@ margin: 0rem !important;
               </div>
               <div class="next-prev-project">
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="portfolio-tiskoviny.html" class="my-custom-prev w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;63efebfc-02d4-82d9-7103-2e3ffa498547&quot;}}}" href="projekt-get-out-fun.html" class="my-custom-prev w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">předchozí</div>
                   </a>
                 </div>
                 <div class="vertical-divider"></div>
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="#" class="my-custom-next w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="portfolio-tiskoviny.html" class="my-custom-next w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">následující</div>
                   </a>
                 </div>
