--- a/projekt-get-out-fun.html
+++ b/projekt-get-out-fun.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 05:57:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535ddb" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -428,7 +428,7 @@ margin: 0rem !important;
                 </div>
                 <div class="vertical-divider"></div>
                 <div class="next-prev-content">
-                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="portfolio-tiskoviny.html" class="my-custom-next w-inline-block">
+                  <a sym-bind="{&quot;link&quot;:{&quot;type&quot;:&quot;Select&quot;,&quot;val&quot;:{&quot;from&quot;:{&quot;type&quot;:&quot;Variable&quot;,&quot;val&quot;:&quot;data&quot;},&quot;prop&quot;:&quot;688e3b0c-c2ad-7546-15a7-8f397641204e&quot;}}}" href="portfolio-loga.html" class="my-custom-next w-inline-block">
                     <div class="arrow-text text-style-allcaps text-size-large">následující</div>
                   </a>
                 </div>
