--- a/projekt-worm-up.html
+++ b/projekt-worm-up.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 02 2025 21:11:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat May 03 2025 05:57:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6597ddbf1e6491a6bf535de1" data-wf-site="64b8d3c3e7ffc183ddfa8a14" lang="cs">
 <head>
   <meta charset="utf-8">
@@ -441,7 +441,7 @@ margin: 0rem !important;
         <div class="padding-global mobile">
           <div class="container-large">
             <div class="project-gallery">
-              <div class="plyr_component">
+              <div data-w-id="cefaa03c-d295-f8d1-5879-6f8a5b0be9b6" class="plyr_component">
                 <div class="plyr_embed w-embed"><video style="width: 100%; height: 100%;" class="plyr_video" playsinline="" controls="" data-poster="">
                     <source src="https://dfdesigner.s3.eu-north-1.amazonaws.com/Wormup+-+Youtube+Commercial+(1080P).mp4" type="video/mp4">
                   </video></div>
@@ -468,7 +468,7 @@ margin: 0rem !important;
                 </div>
               </div>
               <div id="w-node-ecfc4a5d-4415-cad7-7fe8-4dcd5dd0d046-bf535de1" class="project-cover"><img src="images/Hightlighs_wormUP_portfolio.webp" loading="eager" sizes="(max-width: 1980px) 100vw, 1980px" srcset="images/Hightlighs_wormUP_portfolio-p-500.jpg 500w, images/Hightlighs_wormUP_portfolio-p-800.jpg 800w, images/Hightlighs_wormUP_portfolio-p-1080.jpg 1080w, images/Hightlighs_wormUP_portfolio-p-1600.jpg 1600w, images/Hightlighs_wormUP_portfolio.webp 1980w" alt="Worm Up Instagram Highlighs" class="project-image"></div>
-              <div class="plyr_component">
+              <div data-w-id="e352dfae-6f7a-3931-620f-be1fc6d01219" class="plyr_component">
                 <div class="plyr_embed w-embed"><video style="width: 100%; height: 100%;" class="plyr_video" playsinline="" controls="" data-poster="">
                     <source src="https://dfdesigner.s3.eu-north-1.amazonaws.com/Wormup+-+Influencers+(1080P).mp4" type="video/mp4">
                   </video></div>
